--- a/bar.html
+++ b/bar.html
@@ -9,5 +9,10 @@
   <body>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <ol>
+      <button type = "button"><a href="index.html">Home</a></button>
+      <button type = "button"><a href="foo.html">More about me</a></button>
+      <button type = "button"><a href="baz.html">Contact</a></button>
+    </ol>
   </body>
 </html>
