--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>My Webpage</title>
+        <title>D's Webpage</title>
     </head>
     <body style="/*background-image:url('fall.jpg');*/ background-color:white;opacity:1.0" >
 
         <h1 style="text-align:right;background-color: rebeccapurple; color:yellow"><b>Hello, World!</b></h1>
-        <h4 style="text-align:center">My name is </h4><h2 style="text-align:center"><p><i>Demetrius Stanton</i></p></h2>         
+        <h4 style="text-align:center">My name is </h4><h2 style="text-align:center"><p><i>Demetrius Stanton</i></p></h2>
         <p style="text-align:left">I am an aspiring python developer with experience using the following computer languages: </p>
 
         <table>
@@ -57,7 +57,7 @@
                 <td>Scratch</td>
             </tr>
             <tr>
-                <td><a title="jag@dev.java.net, FAL, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Duke_Wave.png"><img width="64" alt="Duke Wave" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Duke_Wave.png/64px-Duke_Wave.png?20090417133346"></a></td>
+                <td><a title="jag@dev.java.net, FAL, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Duke_Wave.png"><img width="32" alt="Duke Wave" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Duke_Wave.png/64px-Duke_Wave.png?20090417133346"></a></td>
                 <td>Java</td>
             </tr>
 
