--- a/foo.html
+++ b/foo.html
@@ -9,10 +9,13 @@
         <link href="styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
-    <body style="/*background-image:url('fall.jpg');*/ background-color:white;opacity:1.0" >
-        <p> Sample code from python: </p>
+    <body style="/*background-image:url('fall.jpg');*/ background-color:orange;opacity:1.0" >
+	<span class="d-block p-2 text-bg-primary">More about me </span>
+	<span class="border">
+		<div style="background-color: #adb5bd">I entered into recovery from alcohol addiction on October 28, 2016. I thank God for every sober breath that I draw, and the new life I feel was given to me. </div>
+	</span>
 
-
+        <p class='mam'> Sample code from python: </p>
 
         <p class="d-inline-flex gap-1">
             <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#dectohex" aria-expanded="false" aria-controls="dectohex">
@@ -100,10 +103,62 @@ if __name__ == "__main__":
           </div>
 
                 <div></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<p class='mam'>Gentle words for recovery: </p>
+<p class="d-inline-flex gap-1">
+            <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#self_acceptance" aria-expanded="false" aria-controls="self_acceptance">
+              Self-Acceptance
+            </button>
+          </p>
+          <div class="collapse" id="self_acceptance">
+            <div class="card card-body">
+
+<p>SELF-ACCEPTANCE</p>
+
+<p>“We know that God lovingly watches over us. We know that when we turn to Him, all will be well with us, here and hereafter.”
+-TWELVE STEPS AND TWELVE TRADITIONS, p. 105</p>
+
+<p>I pray for the willingness to remember that I am a child of God, a divine soul in human form, and that my most basic and urgent life-task is to accept, know, love and nurture myself. As I accept myself, I am accepting God’s will. As I know and love myself, I am knowing and loving God. As I nurture myself I am acting on God’s guidance. I pray for the willingness to let go of my arrogant self-criticism and to praise God by humbly accepting and caring for myself.</p>
+
+</div>
+
+</div>
+
+<p class = 'mam'>My Alma Mater </p>
+</p>Maybe this help's in understanding the color choice</p>
+<img src="https://auburn.edu/template/2022/_assets/images/logos/auburn/formal_horiz/white_orange/auburn_formal_h_white_orange.png" alt="Auburn University" width="378" height="43">
+
+
+
         <div></div>
         <ol>
             <button type = "button"><a href="index.html">Home</a></button>
-            <button type = "button"><a href="bar.html">bar</a></button>
+            <button type = "button"><a href="bar.html">Games</a></button>
             <button type = "button"><a href="baz.html">Contact</a></button>
         </ol>
     </body>
