--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div></div>
         <ol>
             <button type = "button"><a href="foo.html">More about me</a></button>
-            <button type = "button"><a href="bar.html">bar</a></button>
+            <button type = "button"><a href="bar.html">Games</a></button>
             <button type = "button"><a href="baz.html">Contact</a></button>
 
         </ol>
