--- a/bar.html
+++ b/bar.html
@@ -3,12 +3,147 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Games</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+<!--Games 1 Guessing game 1bgg, 1egg; 
+2 rock, paper, scissors 2brps, 2erps -->
+
+
+<!-- Begin Guessing game 1bgg -->
+    <span class="d-block p-2 text-bg-primary">Guessing Game</span>
+
+      <div class="d-inline p-2 text-bg-success">Goal:</div>
+	<p>I'm thinking of a number between, but not including, 0 and 101.</p>
+	<p> Try and guess the number!</p>
+
+<form id='guessing_game1'>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Guess: </label>
+    <input type="number" class="form-control" id="user_guess1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text"></div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button class="btn btn-primary" onclick=guess()>Can you guess the correct number?</button>
+</form>    
+<!-- End Guessing game 1egg -->
+
+
+
+
+
+
+
+
+
+
+<!-- Begin Rock, Paper, Scissors 2brps -->
+<!-- Python code:
+#'''Rock, paper, scissors game
+ 
+import random
+
+CHOICES = ('Rock', 'Paper', 'Scissors')
+
+playerScore, computerScore = 0,0
+
+#Decide whether or not to start the game.
+def startGame(playerResponse =''):
+    print('Welcome to Rock, Paper, Scissors!\n')
+    #How to play
+    #Prompt to play
+    print()
+    acceptableResponse = 'Y','N'
+    while playerResponse not in acceptableResponse:
+        playerResponse = input('Would you like to play a round? Please enter Y or N\n')
+        
+        #yes no or other
+    if playerResponse == 'Y':
+        return True
+    else:
+        return False
+
+#Display the current score    
+def scoreCard():
+    print('The current score is:\n Player: ' + str(playerScore) + '\nComputer: ' + str(computerScore))
+
+#Let the game commence!
+def playGame():
+    computerChoice = computerTurn()
+    playerChoice = playerTurn()
+    winner = compare(playerChoice,computerChoice)
+    return winner
+#Easy task
+def computerTurn():
+    return CHOICES[random.randint(0,2)]
+#The challenge
+def playerTurn(playerResponse =''):
+    while playerResponse not in CHOICES:
+        playerResponse = input('Choose Rock, Paper, or Scissors\n')
+    return playerResponse
+
+#And the winner is....!
+def compare(playerChoice,computerChoice):
+    pc = (playerChoice,computerChoice)
+    print('The player chose: '+pc[0]+'\nThe computer chose: '+pc[1]+'\n')
+    if pc[0] == pc[1]:
+        print('This match is a draw!\n')
+        return 2
+    elif 'Rock' in pc:
+        if 'Paper' in pc:
+            return pc.index('Paper')
+        else:
+            return pc.index('Rock')
+    else:
+        return pc.index('Scissors')
+            
+    return 
+#add a point to the winner's score
+def updateScoreCard(w,localPlayerScore,localComputerScore):
+
+    if w == 0:
+        print('The Player Won!\n')
+        return localPlayerScore + 1,localComputerScore
+    elif w == 1:
+        print('The Computer Won!\n')
+        return localPlayerScore,localComputerScore + 1
+    return localPlayerScore , localComputerScore
+
+#close the program
+def endGame():
+    return
+
+
+#__main__
+while startGame():
+#    winner = playGame() #0 is player wins, 1 is pc wins, else 2? for draw?
+    playerScore, computerScore = updateScoreCard(playGame(),playerScore,computerScore) #Can i shrink this down?
+    scoreCard()
+endGame()
+-->
+<!-- End Rock, Paper, Scissors 2erps -->
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="index_scripts.js"></script>
     <ol>
       <button type = "button"><a href="index.html">Home</a></button>
       <button type = "button"><a href="foo.html">More about me</a></button>
