--- a/baz.html
+++ b/baz.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Contact Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <table style='text-align:center'>
+	<tr><td>Email: D.Stanton256@gmail.com</td></tr>
+
+    <table>
     <ol>
       <button type = "button"><a href="index.html">Home</a></button>
       <button type = "button"><a href="foo.html">More about me</a></button>
-      <button type = "button"><a href="bar.html">bar</a></button>
+      <button type = "button"><a href="bar.html">Games</a></button>
     </ol>
   </body>
 </html>
