Completed index. work on contact and games.
Auburn and ASQ images are from respective websites. Same with language icons. May need to consider having a local copy later.

--- a/foo.html
+++ b/foo.html
@@ -9,10 +9,10 @@
         <link href="styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
-    <body style="/*background-image:url('fall.jpg');*/ background-color:orange;opacity:1.0" >
+    <body style="/*background-image:url('fall.jpg');*/ background-color:midnightblue;opacity:1.0" >
 	<span class="d-block p-2 text-bg-primary">More about me </span>
 	<span class="border">
-		<div style="background-color: #adb5bd">I entered into recovery from alcohol addiction on October 28, 2016. I thank God for every sober breath that I draw, and the new life I feel was given to me. </div>
+		<div style="background-color: #FFD7AE">I entered into recovery from alcohol addiction on October 28, 2016. I thank God for every sober breath that I draw, and the new life I feel was given to me. </div>
 	</span>
 
         <p class='mam'> Sample code from python: </p>
@@ -154,6 +154,10 @@ if __name__ == "__main__":
 <img src="https://auburn.edu/template/2022/_assets/images/logos/auburn/formal_horiz/white_orange/auburn_formal_h_white_orange.png" alt="Auburn University" width="378" height="43">
 
 
+<p class = 'mam'> My certifications:</p>
+<img src="https://asq.org/-/media/ASQ/Images/Logos/logo.png?h=448&w=320&la=en&hash=AD3D419C89B3B334119636D4C22B187C" alt="ASQ logo" class="rounded mx-auto d-block" width="70" height="98">
+
+<p></p>
 
         <div></div>
         <ol>
