These are the files which were finally submitted in fulfillment of cs50's homepage assignment.
	modified:   bar.html
	modified:   baz.html
	modified:   index.html
	modified:   index_scripts.js
	modified:   specification.txt
	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body style="/*background-image:url('fall.jpg');*/ background-color:white;opacity:1.0" >
 
         <h1 style="text-align:right;background-color: rebeccapurple; color:yellow"><b>Hello, World!</b></h1>
-        <h4 style="text-align:center">My name is </h4><h2 style="text-align:center"><p><i>Demetrius Stanton</i></p></h2>
+        <h4 style="text-align:center">My name is </h4><h2><p><i>Demetrius Stanton</i></p></h2>
         <p style="text-align:left">I am an aspiring python developer with experience using the following computer languages: </p>
 
         <table>
