--- a/bar.html
+++ b/bar.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Games</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-<!--Games 1 Guessing game 1bgg, 1egg; 
+<!--Games 1 Guessing game 1bgg, 1egg;
 2 rock, paper, scissors 2brps, 2erps -->
 
 
@@ -17,8 +18,12 @@
       <div class="d-inline p-2 text-bg-success">Goal:</div>
 	<p>I'm thinking of a number between, but not including, 0 and 101.</p>
 	<p> Try and guess the number!</p>
-
-<form id='guessing_game1'>
+    <div class='guessingGame'>Input your guess below</div>
+    <input type="number" class="form-control" id="user_guess1" aria-describedby="emailHelp">
+    <div class='errorResponse'></div>
+    <div class='validResponse'></div>
+    <button onclick='checkGuess(event)'>Submit</button>
+<!--<form id='guessing_game1'>
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Guess: </label>
     <input type="number" class="form-control" id="user_guess1" aria-describedby="emailHelp">
@@ -33,7 +38,8 @@
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
   <button class="btn btn-primary" onclick=guess()>Can you guess the correct number?</button>
-</form>    
+</form>
+-->
 <!-- End Guessing game 1egg -->
 
 
@@ -48,7 +54,7 @@
 <!-- Begin Rock, Paper, Scissors 2brps -->
 <!-- Python code:
 #'''Rock, paper, scissors game
- 
+
 import random
 
 CHOICES = ('Rock', 'Paper', 'Scissors')
@@ -64,14 +70,14 @@ def startGame(playerResponse =''):
     acceptableResponse = 'Y','N'
     while playerResponse not in acceptableResponse:
         playerResponse = input('Would you like to play a round? Please enter Y or N\n')
-        
+
         #yes no or other
     if playerResponse == 'Y':
         return True
     else:
         return False
 
-#Display the current score    
+#Display the current score
 def scoreCard():
     print('The current score is:\n Player: ' + str(playerScore) + '\nComputer: ' + str(computerScore))
 
@@ -104,8 +110,8 @@ def compare(playerChoice,computerChoice):
             return pc.index('Rock')
     else:
         return pc.index('Scissors')
-            
-    return 
+
+    return
 #add a point to the winner's score
 def updateScoreCard(w,localPlayerScore,localComputerScore):
 
