--- a/baz.html
+++ b/baz.html
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      .y{
+        border-left:2px solid black;
+        text-align: left;
+      }
+    </style>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <body style="background-color:aliceblue">
+    <h1>Contact Me</h1>
+    <h2> Via..</h2>
+
     <table style='text-align:center'>
-	<tr><td>Email: D.Stanton256@gmail.com</td></tr>
+
+	<tr><td>Email: </td><td class="y">D.Stanton256@gmail.com</td></tr>
+  <tr><td>Youtube: </td><td class="y"><a href="https://www.youtube.com/@stantde"> Stantde</a></td></tr>
+  <tr><td>Github: </td><td class="y"><a href="https://github.com/Stantde"> Stantde</a></td></tr>
+  <tr><td>LinkedIn: </td><td class="y"><a href="https://www.linkedin.com/in/demetrius-stanton-90a64b271/"> Demetrius Stanton</a></td></tr>
 
     <table>
     <ol>
@@ -18,5 +29,10 @@
       <button type = "button"><a href="foo.html">More about me</a></button>
       <button type = "button"><a href="bar.html">Games</a></button>
     </ol>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
