--- a/bar.html
+++ b/bar.html
@@ -154,6 +154,8 @@ endGame()
       <button type = "button"><a href="index.html">Home</a></button>
       <button type = "button"><a href="foo.html">More about me</a></button>
       <button type = "button"><a href="baz.html">Contact</a></button>
+	    <button type = "button"><a href="/note/index.html">Gaming Notes</a></button>
+
     </ol>
   </body>
 </html>
