--- a/notes/index.html
+++ b/notes/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-
+        Main
     </title>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Template</h1>
-    <div id="links"></div>
+    <h1>Main</h1>
+    <h3><div id="links"></div></h3>
+    <div id="main_body">
         The start:
         <a href="herbert.html"><b>Herbet S. Sinclair</b></a> 
         of Mount Holly Estate at Reddington" declares his will. In it, he gives his manor to his grandnephew Simon P. Jones.
-"  The goal is to find the 46th room in the 45 room manor. Will written 18th March 1993.
-    </body>
+    "  The goal is to find the 46th room in the 45 room manor. Will written 18th March 1993.
+    </div>
+</body>
 </html>
