--- a/notes/people.html
+++ b/notes/people.html
@@ -1,26 +1,23 @@
-<html>
-    <head>
-        <title>
-
-        </title>
-        <div>
-            <ul>
-                <li>            
-                    <a href="index.html"><b>Back to main</b></a>
-                </li>
-                <li>
-                    <a href="people.html"><b>People</b></a>
-                </li>
-            </ul>
-        </div>
-    </head>
-    <body>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        People
+    </title>
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <h1>People</h1>
+    <div id="links"></div>
+    <div id="main_body">
+        <a href="herbert.html"><b>Herbet S. Sinclair</b></a>
+        <p>
+            Narrator of the will in the beginning of the game. In his will, he declares the manor, Mount Holly Estate at Reddington, will be given
+            to his grandnephew *Simon P. Jones, son of Herbert's niece *Mary Matthew, upon finding the 46th room of the 45 room estate.
+        </p>        
+    </div>
     </body>
 </html>
 
-<a href="herbert.html"><b>Herbet S. Sinclair</b></a>
-*Herbet S. Sinclair
- of Mount Holly Estate at Reddington" declares his will. In it, he gives his manor to his grandnephew 
-*Simon P. Jones.
-Son of his niece Mary Matthew
