--- a/notes/rooms.html
+++ b/notes/rooms.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Days
+        Rooms
     </title>
     <script src="script.js" defer></script>
-    <script src="days.js" defer></script>
 </head>
 <body>
-    <h1>List of days and the notes from each:</h1>
+    <h1>Rooms</h1>
     <div id="links"></div>
-    <div id="day_links"></div>
-        
-            <a href="day01.html"><b>Day One</b></a>
-        
-    </body>
+    <div>
+        <ul>
+            <b><h3>2</h3><p>Entrance Room</p></b>
+            <p>Notes about this room.</p>
+        </ul>
+    </div>
+</body>
 </html>
+
