--- a/notes/herbert.html
+++ b/notes/herbert.html
@@ -1,20 +1,16 @@
-<html>
-    <head>
-        <title>
-            Herbert S. Sinclair
-        </title>
-        <div>
-            <ul>
-                <li>            
-                    <a href="index.html"><b>Back to main</b></a>
-                </li>
-                </li>
-                    <a href="people.html"><b>People</b></a>
-                </li>
-            </ul>
-        </div>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Herbet S. Sinclair
+    </title>
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <h1>Herbet S. Sinclair</h1>
+    <div id="links"></div>
         "Herbet S. Sinclair of Mount Holly Estate at Reddington" declares his will. In it, he gives his manor to his grandnephew Simon P. Jones.
     </body>
 </html>
