--- a/notes/day01.html
+++ b/notes/day01.html
@@ -1,23 +1,16 @@
-<html>
-    <head>
-        <title>
-
-        </title>
-        <div>
-            <ul>
-                <li>            
-                    <a href="index.html"><b>Back to main</b></a>
-                </li>
-                <li>
-                    <a href="people.html"><b>People</b></a>
-                </li>
-                <li>
-                    <a href="days.html"><b>Days</b></a>
-                </li>
-            </ul>
-        </div>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Day 01
+    </title>
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <h1>Day 01</h1>
+    <div id="links"></div>
         <ul>
             <li>    
                 <div>
