--- a/notes/day01.html
+++ b/notes/day01.html
@@ -16,13 +16,21 @@
                 <div>
                     <ul>
                         <li>
+                        <!-- 
+                        Manually: Link to a specific time in a video by adding &t=10 to the end of the URL 
+                        (replace 10 with the seconds).
+                         -->
+                            <a href="https://youtube.com/live/J1EteUivy3o?feature=share&t=8640s">My video here.</a>
+                        </li>                        
+                        <li>
                             Started with 50 steps. 
                         </li>
                         <li>
-                            Started in Entrance Hall [1,3]. Entrance Hall [blue] has four exits. It is Room 02.
+                            Started in <a href="entrance_hall.html">Entrance Hall</a> <a href="map.html">[1,3]</a>.
+                            <a href="entrance_hall.html">Entrance Hall</a> [blue] has four exits. It is Room 02.
                         </li>
                         <li>
-                            Letter on the table in the first room. Stamp in top right corner. First page has holly? Lays out rules of the game.
+                            Letter on the table in the first room. Stamp in top right corner. First page has holly<a href="questions.html">?</a> Lays out rules of the game.
                         </li>
                         <li>
                             Note on table about exploration and exhaustion system.
@@ -31,53 +39,92 @@
                             paintings in the room [Rank Column notation] Ex: [1-9,1-5], where [1,1] is bottom left and [9,5] is top right Queen of Diamonds and Ace of Spades.
                         </li>
                         <li> 
-                            built closet (two items) going east [1,4].
+                            built <a href="closet.html">Closet</a> (two items) going east [1,4]. 
                         </li>
                         <li>
-                            closet [1,4] contained pine and pin (E)
+                            <a href="closet.html">Closet</a> [1,4] contained pine and pin (E)
                         </li>
                         <li> 
                             found silver key. unlocking doors with silver key leads to a room with many doors.
                         </li>
-                        <li>
-                            Went back to entrance room and drafted Pantry [2,3] next. Found organge +5 steps and +4 coins.
+                        <li style="color: darkred;">
+                            Went back to entrance room and drafted <a href="pantry.html">Pantry</a> [2,3] next. Found organge +5 steps and +4 coins.
                             Pantry has two exits, SW. Found bridge and bride (G).
                         </li>
-                        <li>
-                            Continued west into Nook [2,2]. 
+                        <li style="color:blueviolet">
+                            Continued west into <a href=nook.html>Nook</a> [2,2]. 
                             Found key on table. 
                             Found paintings of stairs and stars (I). 
-                            Nook has two exits SE. (maybe I should use top, bottom, left, right notation? NESW changes depending on orientation)
+                            Nook has two exits SE. (maybe I should use top, bottom, left, right notation<a href="questions.html">?</a> NESW changes depending on orientation)
                             Found A journey noteworthy (+ small text.)
                             Found lockbox next to lazy boy.
                         </li>
-                        <li>
-                            exited north into Den [3,2].
+                        <li style="color: sandybrown">
+                            exited north into <a href="den.html">Den</a> [3,2].
                             Found a bunch of clocks. And an active fireplace.
                             Found gem on center table.
                             Found paintings of tier cake tin and tie. I think TIER and TIE (R)
                         </li>
-                        <li>
-                            Exited east into Lavatory [3,3].
+                        <li style="color: green;">
+                            Exited east into <a href="lavatory.html">Lavatory</a> [3,3].
                             Picture of ROAD and ROD (A).
                         </li>
-                        <li>
-                            From Den continued north into bed room [4,2]
+                        <li id="test" style="color: indigo;">
+                            From <a href="den.html">Den</a> continued north into <a href="bedroom.html">bedroom</a> [4,2]
                             Bed room two exits BR
-                            Found picture of old woman. Who is she?
+                            Found picture of old woman. Who is she<a href="questions.html">?</a>
                             Found painting of an overcoat and a cot... COAT and COT (A).
                             Curious Downward pointing finger
                             Postcard of Reddington.
                         </li>
-                        <li>
-                            Exited into Parlor [4, 3] UL
+                        <li style="color: midnightblue;">
+                            Exited into <a href="parlor.html">Parlor</a> [4, 3] UL
                             first time logic puzzle. Found coin purse on end table
-                            painting of stage and sage? (time stamp 26:30)
+                            painting of stage and sage<a href="questions.html">?</a> (time stamp 26:30)
                         </li>
-                        <li>
-                            exited north into Spare Room [5,3]
+                        <li style="color: yellow;">
+                            exited north into <a href="spare_room.html">Spare Room</a> [5,3]
                             Nothing interesting in here.
                             Im stopping here.... (28:30)
+                        </li>
+                        <li>
+                            exited north into <a href="boiler_room.html"> Boiler Room </a> [6,3].
+                        </li>
+                        <li id="security" style="color: aqua;"> 
+                            Exiting West into <a href="security_room.html">Security Room</a> [6,2].                             
+                        </li>
+                        <li>    
+                            COAST and COST (A)
+                        </li>          
+                        <li id="boudoir">
+                            Exiting south out of <a href="security_room.html">Security Room</a> into <a href="boudoir.html">Boudoir</a> [5,2]
+                        </li>              
+                        <li>
+                            PILOT and PLOT (I)
+                        </li>
+                        <li>
+                            safe code is 1225
+                        </li>
+                        <li>
+                            Red letter found in safe has the number 4 on it.
+                        </li>
+                        <li id="chapel" style="color: palegreen;">
+                            Exiting west into <a href="chapel.html">Chapel</a> [5,1].
+                        </li>
+                        <li id="corridor">
+                            Exiting south into <a href="corridor.html">corridor</a> [4,1]
+                        </li>
+                        <li>
+                            CARD and CAR (D)
+                        </li>
+                        <li id="west_wing_hall" style="color: red;">
+                            Continuing south into <a href="west_wing_hall.html"> West Wing Hall [3,1] </a>
+                        </li>
+                        <li>
+                            ROW and CROW (C)                            
+                        </li>
+                        <li>
+                            Stopping here at 01:04:21. (8640) Will update at top.
                         </li>
 
                     </ul>
