--- a/notes/lavatory.html
+++ b/notes/lavatory.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Days
+        Lavatory
     </title>
     <script src="script.js" defer></script>
-    <script src="days.js" defer></script>
 </head>
 <body>
-    <h1>List of days and the notes from each:</h1>
+    <h1>Lavatory</h1>
     <div id="links"></div>
-    <h1> </h1>
-    <div id="day_links"></div>
+    <p> 
+        Day 01
+    </p>
+    <li>
+        Exited east into <a href="lavatory.html">Lavatory</a> [3,3].
+        Picture of ROAD and ROD (A).
+    </li>
 </body>
 </html>
+
