--- a/notes/map.html
+++ b/notes/map.html
@@ -25,10 +25,10 @@
         const row9 = ['- ', '- ', '- ', '- ', '- '];
         const row8 = ['- ', '- ', '- ', '- ', '- '];
         const row7 = ['- ', '- ', '- ', '- ', '- '];
-        const row6 = ['- ', '- ', '- ', '- ', '- '];
-        const row5 = ['- ', '- ', '- ', '- ', '- '];
-        const row4 = ['- ', 'A ', 'T?', '- ', '- '];
-        const row3 = ['- ', 'R ', 'A ', '- ', '- '];
+        const row6 = ['- ', 'A ', '- ', '- ', '- '];
+        const row5 = ['- ', 'I ', '- ', '- ', '- '];
+        const row4 = ['D ', 'A ', 'T?', '- ', '- '];
+        const row3 = ['C ', 'R ', 'A ', '- ', '- '];
         const row2 = ['- ', 'I ', 'G ', '- ', '- '];
         const row1 = ['- ', '- ', '- ', 'E ', '- '];
 
