--- a/notes/rooms.html
+++ b/notes/rooms.html
@@ -7,16 +7,12 @@
         Rooms
     </title>
     <script src="script.js" defer></script>
+    <script src="script_rooms.js" defer></script>
 </head>
 <body>
     <h1>Rooms</h1>
-    <div id="links"></div>
-    <div>
-        <ul>
-            <b><h3>2</h3><p>Entrance Room</p></b>
-            <p>Notes about this room.</p>
-        </ul>
-    </div>
+    <div id="links"></div>    
+    <div id="rooms"></div>
 </body>
 </html>
 
