--- a/notes/corridor.html
+++ b/notes/corridor.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Days
+        Corridor
     </title>
     <script src="script.js" defer></script>
-    <script src="days.js" defer></script>
 </head>
 <body>
-    <h1>List of days and the notes from each:</h1>
+    <h1>Corridor</h1>
     <div id="links"></div>
-    <h1> </h1>
-    <div id="day_links"></div>
+    <p><a href="day01.html#corridor">Day 01</a></p>
+    <li id="corridor">
+        Exiting south into <a href="corridor.html">corridor</a> [4,1]
+    </li>
 </body>
 </html>
+
