--- a/notes/people.html
+++ b/notes/people.html
@@ -17,6 +17,16 @@
             Narrator of the will in the beginning of the game. In his will, he declares the manor, Mount Holly Estate at Reddington, will be given
             to his grandnephew *Simon P. Jones, son of Herbert's niece *Mary Matthew, upon finding the 46th room of the 45 room estate.
         </p>        
+    <li href="daniel">
+        <h4>Daniel</h4>
+        <p>
+            Father of Simon, heir to the Mount Holly Estate at Reddington.
+        </p>
+    </li>
+    <h4>Lady Clara Epsen</h4>
+    <p>
+        Noted in Staffing notice in <a href="west_wing_hall.html#clara_epsen">west wing hall</a>            
+    </p>
     </div>
     </body>
 </html>
