--- a/notes/spare_room.html
+++ b/notes/spare_room.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Days
+        Sapre Room
     </title>
     <script src="script.js" defer></script>
-    <script src="days.js" defer></script>
 </head>
 <body>
-    <h1>List of days and the notes from each:</h1>
+    <h1>Spare Room</h1>
     <div id="links"></div>
-    <h1> </h1>
-    <div id="day_links"></div>
+    <li>
+        Day 01
+    </li>
+    <li>
+        exited north into <a href="spare_room.html">Spare Room</a> [5,3]
+        Nothing interesting in here.
+        Im stopping here.... (28:30)
+    </li>
 </body>
 </html>
+
