--- a/notes/day01.html
+++ b/notes/day01.html
@@ -14,14 +14,7 @@
         <ul>
             <li>    
                 <div>
-                    <ul>
-                        <li>
-                        <!-- 
-                        Manually: Link to a specific time in a video by adding &t=10 to the end of the URL 
-                        (replace 10 with the seconds).
-                         -->
-                            <a href="https://youtube.com/live/J1EteUivy3o?feature=share&t=8640s">My video here.</a>
-                        </li>                        
+                    <ul>                        
                         <li>
                             Started with 50 steps. 
                         </li>
@@ -112,7 +105,7 @@
                             Exiting west into <a href="chapel.html">Chapel</a> [5,1].
                         </li>
                         <li id="corridor">
-                            Exiting south into <a href="corridor.html">corridor</a> [4,1]
+                            Exiting south into <a href="corridor.html">Corridor</a> [4,1]
                         </li>
                         <li>
                             CARD and CAR (D)
@@ -126,10 +119,32 @@
                         <li>
                             Stopping here at 01:04:21. (8640) Will update at top.
                         </li>
-
+                        <li id="dining_room" style="color: green;">
+                            Continuing south into <a href="dining_room.html#day01"> Dining Room </a> [2,1]
+                        </li>
+                        <li>
+                            Found PLANE and PLAN (E)
+                        </li>  
+                        <li id="kitchen">
+                            Continuing south into <a href="kitchen.html">Kitchen</a> [1,1].
+                        </li>                      
+                        <li>
+                            My spelling maybe be off, but this looks like DESERT and DESSERT (S)
+                        </li>
+                        <li style="color: orchid;" id="bunk_room">
+                            Continuing east into <a href="bunk_room.html">Bunk Room</a>  [1,2].
+                        </li>
+                        <li>
+                            Found gems on an end table.
+                        </li>
+                        <li>
+                            Picture of a pry bar and ...? PRY and PRAY (A).
+                        </li>
+                        <li> Having run out of keys I have to call it a day.</li>
                     </ul>
                 </div>
             </li>
         </ul>
+        <p><a href="day02.html">Next Day</a></p>
     </body>
 </html>
