--- a/notes/grounds.html
+++ b/notes/grounds.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Template
+        Grounds
     </title>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Template</h1>
+    <h1>Grounds</h1>
     <div id="links"></div>
-    <p><a href="day02.html#kitchen">Day XXX</a></p>
+    <p><a href="day02.html#grounds">Day 02</a></p>
+    <li id="grounds" style="color: brown;">
+        This day I go outside onto the <a href="grounds.html"> Grounds </a>
+    </li>
 </body>
 </html>
 
