--- a/notes/kitchen.html
+++ b/notes/kitchen.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Template
+        Kitchen
     </title>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Template</h1>
+    <h1>Kitchen</h1>
     <div id="links"></div>
-    <p><a href="day02.html#kitchen">Day XXX</a></p>
+    <p><a href="day01.html#kitchen">Day 01</a></p>
+    <li id="kitchen">
+        Continuing south into <a href="kitchen.html">Kitchen</a> [1,1].
+    </li>
 </body>
 </html>
 
