--- a/notes/map.html
+++ b/notes/map.html
@@ -29,8 +29,8 @@
         const row5 = ['- ', 'I ', '- ', '- ', '- '];
         const row4 = ['D ', 'A ', 'T?', '- ', '- '];
         const row3 = ['C ', 'R ', 'A ', '- ', '- '];
-        const row2 = ['- ', 'I ', 'G ', '- ', '- '];
-        const row1 = ['- ', '- ', '- ', 'E ', '- '];
+        const row2 = ['E ', 'I ', 'G ', '- ', '- '];
+        const row1 = ['S ', 'A ', '- ', 'E ', '- '];
 
         // Loop to create rows
         for (let i = 0; i < 9; i++) {
