--- a/notes/index.html
+++ b/notes/index.html
@@ -17,5 +17,8 @@
         of Mount Holly Estate at Reddington" declares his will. In it, he gives his manor to his grandnephew Simon P. Jones.
     "  The goal is to find the 46th room in the 45 room manor. Will written 18th March 1993.
     </div>
+    <div id="other_games">
+        <a href="DeS_faith_regen_build.html"> Demon's Souls Faith Regen Build </a>
+    </div>
 </body>
 </html>
