--- a/notes/DeS_faith_regen_build.html
+++ b/notes/DeS_faith_regen_build.html
@@ -1,4 +1,5 @@
 <table class="form-table">
+    <a href="../">../</a>
     <tr class="form-row">
     <td class="form-labels"><span class="form-label">Build summary</span></td>
     <td class="form-values"><span>My variation and setup, on request.</span></td>
