--- a/notes/DeS_faith_regen_build.html
+++ b/notes/DeS_faith_regen_build.html
@@ -1,7 +1,7 @@
 <table class="form-table">
     <a href="../">../</a>
     <tr class="form-row">
-    <td class="form-labels"><span class="form-label">Build summary Change @ 1257 05072025</span></td>
+    <td class="form-labels"><span class="form-label">Build summary</span></td>
     <td class="form-values"><span>My variation and setup, on request.</span></td>
     </tr>
     <tr class="form-row">
