--- a/notes/day02.html
+++ b/notes/day02.html
@@ -12,21 +12,30 @@
     <h1>Day 02</h1>
     <div id="links"></div>
     <p><a href="day01.html">Previous Day</a></p>
-    <!-- 
-    Manually: Link to a specific time in a video by adding &t=10 to the end of the URL 
+    <!--
+    Manually: Link to a specific time in a video by adding &t=10 to the end of the URL
     (replace 10 with the seconds).
     -->
     <a href="https://youtube.com/live/J1EteUivy3o?feature=share&t=8640s">My video here.</a>
     <li>
-        Starting in the <a href="entrance_hall.html">Entrance Hall</a> <a href="map.html">[1,3]</a>.    
+        Starting in the <a href="entrance_hall.html">Entrance Hall</a> <a href="map.html">[1,3]</a>.
     </li>
     <li id="grounds" style="color: brown;">
         This day I go outside onto the <a href="grounds.html"> Grounds </a>
     </li>
     <li id="private_drive" style="color: gray;">
         And then on to the <a href="private_drive.html"> Private Drive </a>
-    </li>                   
-    <!-- #maybe this needs to be a python script to check for the existence of the file, if not, create it, if so,print file exists? -->     
+    </li>
+    <li>
+        Maybe it is for the best that I simply stick to notes about the house? (1:20:29)
+    </li>
+    <li id="storeroom">
+        West into <a href="storeroom.html">StoreRoom. [1,2]</a>
+    </li>
+    <li>
+        East into the hallway...
+    </li>
+    <!-- #maybe this needs to be a python script to check for the existence of the file, if not, create it, if so,print file exists? -->
     <p><a href="day03.html">Next Day</a></p>
 </body>
 </html>
